; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/file/extr_fd.c_OpenTransientFilePerm.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/file/extr_fd.c_OpenTransientFilePerm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { i32 }

@LOG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"OpenTransientFile: Allocated %d (%s)\00", align 1
@numAllocatedDescs = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_INSUFFICIENT_RESOURCES = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [63 x i8] c"exceeded maxAllocatedDescs (%d) while trying to open file \22%s\22\00", align 1
@maxAllocatedDescs = common dso_local global i32 0, align 4
@allocatedDescs = common dso_local global %struct.TYPE_5__* null, align 8
@AllocateDescRawFD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @OpenTransientFilePerm(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* @LOG, align 4
  %11 = load i64, i64* @numAllocatedDescs, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @elog(i32 %10, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i64 %11, i8* %12)
  %14 = call i32 @DO_DB(i32 %13)
  %15 = call i32 (...) @reserveAllocatedDesc()
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %25, label %17

17:                                               ; preds = %3
  %18 = load i32, i32* @ERROR, align 4
  %19 = load i32, i32* @ERRCODE_INSUFFICIENT_RESOURCES, align 4
  %20 = call i32 @errcode(i32 %19)
  %21 = load i32, i32* @maxAllocatedDescs, align 4
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @errmsg(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.1, i64 0, i64 0), i32 %21, i8* %22)
  %24 = call i32 @ereport(i32 %18, i32 %23)
  br label %25

25:                                               ; preds = %17, %3
  %26 = call i32 (...) @ReleaseLruFiles()
  %27 = load i8*, i8** %5, align 8
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @BasicOpenFilePerm(i8* %27, i32 %28, i32 %29)
  store i32 %30, i32* %8, align 4
  %31 = load i32, i32* %8, align 4
  %32 = icmp sge i32 %31, 0
  br i1 %32, label %33, label %50

33:                                               ; preds = %25
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** @allocatedDescs, align 8
  %35 = load i64, i64* @numAllocatedDescs, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i64 %35
  store %struct.TYPE_5__* %36, %struct.TYPE_5__** %9, align 8
  %37 = load i32, i32* @AllocateDescRawFD, align 4
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 2
  store i32 %37, i32* %39, align 4
  %40 = load i32, i32* %8, align 4
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 1
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %42, i32 0, i32 0
  store i32 %40, i32* %43, align 4
  %44 = call i32 (...) @GetCurrentSubTransactionId()
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %9, align 8
  %46 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %45, i32 0, i32 0
  store i32 %44, i32* %46, align 4
  %47 = load i64, i64* @numAllocatedDescs, align 8
  %48 = add i64 %47, 1
  store i64 %48, i64* @numAllocatedDescs, align 8
  %49 = load i32, i32* %8, align 4
  store i32 %49, i32* %4, align 4
  br label %51

50:                                               ; preds = %25
  store i32 -1, i32* %4, align 4
  br label %51

51:                                               ; preds = %50, %33
  %52 = load i32, i32* %4, align 4
  ret i32 %52
}

declare dso_local i32 @DO_DB(i32) #1

declare dso_local i32 @elog(i32, i8*, i64, i8*) #1

declare dso_local i32 @reserveAllocatedDesc(...) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32, i8*) #1

declare dso_local i32 @ReleaseLruFiles(...) #1

declare dso_local i32 @BasicOpenFilePerm(i8*, i32, i32) #1

declare dso_local i32 @GetCurrentSubTransactionId(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
